Reviewed Energy Analysis

--- a/02_Regression/loadData.ipynb
+++ b/02_Regression/loadData.ipynb
@@ -72,20 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = ['2017', '2018', '2019', '2020', '2021']\n",
+    "years = ['2016', '2017', '2018', '2019', '2020', '2021']\n",
+    "EnergyGeneration_All = pd.DataFrame()\n",
     "\n",
-    "EnergyGeneration_All = pd.io.json.read_json('../data/genTypes/energy_generation_type_date2016.json')\n",
     "for x in years:\n",
     "    pathEnergy = '../data/genTypes/energy_generation_type_date' + x + '.json'\n",
     "    newDF = pd.io.json.read_json(pathEnergy).round()\n",
-    "    #EnergyGeneration_All = EnergyGeneration_All.append(newDF)\n",
     "    EnergyGeneration_All = pd.concat([EnergyGeneration_All, newDF])\n",
     "\n",
-    "EnergyGeneration_All.tail()\n",
     "EnergyGeneration_All.fillna(0, inplace=True)\n",
     "\n",
     "del(newDF, pathEnergy, x, years)"
@@ -100,18 +98,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Renewable</th>\n",
+       "      <th>Non_Renewable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>253586.0</td>\n",
+       "      <td>335401.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-02</th>\n",
+       "      <td>294759.0</td>\n",
+       "      <td>357755.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-03</th>\n",
+       "      <td>361739.0</td>\n",
+       "      <td>334133.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-04</th>\n",
+       "      <td>338825.0</td>\n",
+       "      <td>367608.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-05</th>\n",
+       "      <td>395072.0</td>\n",
+       "      <td>352461.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Renewable  Non_Renewable\n",
+       "2016-01-01   253586.0       335401.0\n",
+       "2016-01-02   294759.0       357755.0\n",
+       "2016-01-03   361739.0       334133.0\n",
+       "2016-01-04   338825.0       367608.0\n",
+       "2016-01-05   395072.0       352461.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "energySummary = pd.DataFrame()\n",
     "\n",
-    "energySummary['Renewable'] = EnergyGeneration_All['Hidráulica'] + EnergyGeneration_All['Hidroeólica'] + EnergyGeneration_All['Eólica'] + EnergyGeneration_All['Solar fotovoltaica'] + EnergyGeneration_All['Solar térmica'] + EnergyGeneration_All['Otras renovables'] + EnergyGeneration_All['Residuos renovables']\n",
+    "\n",
+    "energySummary = pd.DataFrame()\n",
+    "renewableTypes = ['Hidráulica', 'Hidroeólica', 'Eólica', 'Solar fotovoltaica', 'Solar térmica', 'Otras renovables', 'Residuos renovables']\n",
+    "\n",
+    "energySummary['Renewable'] = EnergyGeneration_All[renewableTypes].sum(axis=1)\n",
     "energySummary['Non_Renewable'] = EnergyGeneration_All['Generación total'] - energySummary['Renewable']\n",
     "\n",
-    "energySummary.tail()\n",
     "\n",
-    "del(EnergyGeneration_All)"
+    "\n",
+    "#del(EnergyGeneration_All)\n",
+    "\n",
+    "energySummary.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Renewable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>253586.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-02</th>\n",
+       "      <td>294759.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-03</th>\n",
+       "      <td>361739.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-04</th>\n",
+       "      <td>338825.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-05</th>\n",
+       "      <td>395072.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Renewable\n",
+       "2016-01-01   253586.0\n",
+       "2016-01-02   294759.0\n",
+       "2016-01-03   361739.0\n",
+       "2016-01-04   338825.0\n",
+       "2016-01-05   395072.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "energySummary = pd.DataFrame()\n",
+    "renewableTypes = ['Hidráulica', 'Hidroeólica', 'Eólica', 'Solar fotovoltaica', 'Solar térmica', 'Otras renovables', 'Residuos renovables']\n",
+    "energySummary['Renewable'] = EnergyGeneration_All[renewableTypes].sum(axis=1)\n",
+    "\n",
+    "energySummary.head()"
    ]
   },
   {
