Adjusted user name

--- a/01_Causes of energy costs in Spain/Analysis_Energy_price_Spain_2021.ipynb
+++ b/01_Causes of energy costs in Spain/Analysis_Energy_price_Spain_2021.ipynb
@@ -1218,9 +1218,9 @@
     }
    ],
    "source": [
-    "\"\"\"fig, ax = plt.subplots(n_splits, figsize=(10,10))\n",
+    "#fig, ax = plt.subplots(n_splits, figsize=(10,10))\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "    \n",
     "     #Plot the results\n",
     "    ax[i-1].scatter(y_test, y_pred)\n",
